# robot_autobattler

./: .gitignore  .pylintrc  _version.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  unittest.yml
assets/item_data/: badges.json  badges.numbers  cards.xml  simple_cards.json
design_documentation/: Design Document.pages  design_document.md
guides/: guides.md
notes/: ideas.md
notes/balancing/: Balancing.numbers  params.txt  search.py
notes/guides/: guides.md
player_data/: settings.json
scripts/: main.py
scripts/backend/: asset_loaders.py  badges.py  cards.py  combat.py  command.py  event.py  factories.py  game.py  game_state.py  inventory.py  physics.py  scenes.py  settings.py  team.py  unit.py  unit_upgrade_component.py  unit_upgrades.py  unitstat.py  upgrade_components.py  upgrades.py  weapon.py
scripts/backend/battleboard/: a-star.py  battle_tile.py  battleboard.py
scripts/backend/unit/: unit.py  unitstat.py  (+1 more)
scripts/frontend/: animator.py  battle_camera.py  board_object.py  button.py  colors.py  fonts.py  scenes.py  ui.py  unit_upgrades.py  upgrades.py
scripts/main/: main.py  settings.json
scripts/utilities/: autoname_enum.py  enums.py  game_math.py  geometry.py  identifiers.py  load_data.py  singleton.py  structure.py
src/: main.py
src/backend/: asset_loaders.py  badges.py  cards.py  command.py  event.py  factories.py  game.py  physics.py  settings.py  status_effect.py  team.py  unit.py  unitstat.py  upgrade_components.py  upgrades.py
src/frontend/: battle_camera.py  board.py  fonts.py  scenes.py  ui.py  upgrades.py
src/robot_autobattler/: config.py  main.py
src/scripts/: main.py
src/utilities/: geometry.py  identifiers.py
tests/: __init__.py  test_application.py  test_asset_loaders.py  test_event_history.py  test_inventory.py  test_team.py  test_upgrades.py  unit_tests.py
(+87 files in other folders)
