[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Robot Autobattler"
version = "0.0.1"
authors = [
    {name = "Wally Wissner", email = "wally.wissner@gmail.com"},
]
requires-python = ">= 3.11"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Games/Entertainment",
]

[tool.setuptools.packages.find]
where = ["src"]
